--- a/src/app/map/Facilities/AllFacilities2.module.css
+++ b/src/app/map/Facilities/AllFacilities2.module.css
@@ -1,18 +1,17 @@
 .skeleton {
   width: 100%;
   height: 250px;
-  background: #e0e0e0;
-  animation: pulse 1.5s infinite;
+  background: linear-gradient(90deg, #e0e0e0 25%, #f2f2f2 50%, #e0e0e0 75%);
+  background-size: 200% 100%;
+  animation: pulse 1.5s ease-in-out infinite;
+  border-radius: 8px; /* Optional: makes the skeleton slightly rounded */
 }
 
 @keyframes pulse {
   0% {
-    background-color: #e0e0e0;
-  }
-  50% {
-    background-color: #f7f7f7;
+    background-position: 200% 0;
   }
   100% {
-    background-color: #e0e0e0;
+    background-position: -200% 0;
   }
 }
